Stop items from overflowing

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ a {
 
 }
 
-
 .announcement-heading {
     font-size: 1rem;
 }
@@ -99,6 +98,7 @@ a {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
+    overflow-x: scroll;
 }
 
     
@@ -117,6 +117,7 @@ body {
     /* Items: */
     display: grid;
     grid-template: repeat(4, 1fr) / 1fr;
+    overflow-x: scroll;
     
 }
 
